--- a/app/assets/stylesheets/animal/animal_index.scss
+++ b/app/assets/stylesheets/animal/animal_index.scss
@@ -147,5 +147,65 @@
 }
 
 @media screen and (max-width: 750px){
+  .animals-main{
+    width: 100vw;
+  }
+  .search_view{
+    width: 80%;
+    margin: 40px auto;
+    form{
+      display: block;
+      select{
+        height: 48px;
+        border-radius: 4px;
+        border: 1px solid #efefef;
+        font-size: 16px;
+        line-height: 1.5;
+        cursor: pointer;
+        padding: 0 16px;
+        width: 49.5%;
+        box-sizing: border-box;
+      }
+      .search-input{
+        margin-top: 20px;
+        width: 100%;
+        height: 48px;
+        border-radius: 4px;
+        border: 1px solid #efefef;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
+        padding: 0 10px;
+        box-sizing: border-box;
+      }
+      .search-btn{
+        margin-top: 20px;
+        background: #3EC1C9;
+        border: 1px solid #3EC1C9;
+        color: #fff;
+        display: block;
+        width: 100%;
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 48px;
+        transition: all ease-out .3s;
+        text-align: center;
+        border-radius: 5px;
+      }
+    }
+  }
   
+  .animal-show__link{
+    margin: 20px 5px;
+    cursor: pointer;
+    display: block;
+    width: 31.5%;
+    text-align: center;
+    text-decoration: none;
+    color: #484848;
+    &--image{
+      position: relative;
+      overflow: hidden;
+    }
+  }
 }
