--- a/app/assets/stylesheets/animal/animal_show.scss
+++ b/app/assets/stylesheets/animal/animal_show.scss
@@ -103,6 +103,7 @@
           height: 100%;
           display: block;
           transition-duration: 0.3s;
+          object-fit: cover;
           &:hover{
             transform: scale(1.1);
             transition-duration: 0.3s;
@@ -122,6 +123,7 @@
           height: 100%;
           display: block;
           transition-duration: 0.3s;
+          object-fit: cover;
           &:hover{
             transform: scale(1.1);
             transition-duration: 0.3s;
@@ -133,7 +135,7 @@
 }
 
 .animal-functions{
-  width: 1032px;
+  width: 80%;
   margin: 40px auto 0;
   &__top{
     display: flex;
@@ -322,4 +324,278 @@
       cursor: pointer;
     }
   }
+}
+
+@media screen and (max-width: 750px){
+  .animal-images{
+    display: flex;
+    &__image-left{
+      height: 500px;
+      width: 50%;
+      overflow: hidden;
+      border: 1px solid #efefef;
+      img{
+        height: 100%;
+        width: 100%;
+        display: block;
+        transition-duration: 0.3s;
+        &:hover{
+          transform: scale(1.1);
+          transition-duration: 0.3s;
+        }
+      }
+      .buied_item{
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 150px 150px 0 0;
+        border-color: #3EC1C9 transparent transparent transparent;
+        position: absolute;
+        top: 138px;
+        left: 1px;
+        padding-top: 10px;
+        &:after{
+          content: "Decided";
+          font-size: 20px;
+          display: block;
+          color: #fff;
+          transform: rotate(-45deg);
+          letter-spacing: 2px;
+          font-weight: 600;
+          position: absolute;
+          top: -100px;
+          left: 10px;
+        }
+      }
+    }
+    &__image-right{
+      height: 500px;
+      width: 50%;
+      &__top{
+        display: flex;
+        width: 100%;
+        height: 50%;
+        &-left{
+          width: 50%;
+          height: 100%;
+          overflow: hidden;
+          text-align: center;
+          line-height: 250px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            display: block;
+            transition-duration: 0.3s;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+        &-right{
+          width: 50%;
+          height: 100%;
+          overflow: hidden;
+          text-align: center;
+          line-height: 250px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            display: block;
+            transition-duration: 0.3s;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+      }
+      &__bottom{
+        display: flex;
+        height: 50%;
+        width: 100%;
+        &-left{
+          overflow: hidden;
+          width: 50%;
+          height: 100%;
+          text-align: center;
+          line-height: 250px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            display: block;
+            transition-duration: 0.3s;
+            object-fit: cover;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+        &-right{
+          overflow: hidden;
+          width: 50%;
+          height: 100%;
+          text-align: center;
+          line-height: 250px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            display: block;
+            transition-duration: 0.3s;
+            object-fit: cover;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  .animal-functions{
+    width: 80%;
+    margin: 40px auto 0;
+    &__top{
+      display: block;
+      box-sizing: border-box;
+    }
+  }
+  
+  //募集動物の情報欄
+  .animal-information{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    &__header{
+      &--name{
+        display: flex;
+        font-size: 30px;
+        font-weight: bold;
+        &--male{
+          margin-left: 10px;
+          color: blue;
+        }
+        &--female{
+          margin-left: 10px;
+          color: red;
+        }
+        &--unknown{
+          margin-left: 10px;
+          color: #aaa;
+          font-size: 15px;
+          line-height: 45px;
+        }
+      }
+      &--prefecture{
+        color: #484848;
+      }
+    }
+    &__main{
+      margin-top: 40px;
+      &--description{
+        font-size: 14px;
+        margin-top: 20px;
+        padding-bottom: 20px;
+      }
+    }
+  }
+  
+  //右側機能
+  .animal-transaction{
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px;
+  }
+  
+  //募集動物についての質問チャットスペース
+  //チャット一覧
+  .animal--chatspace__comments{
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    display: flex;
+    &--user{
+      width: 50px;
+      &--icon{
+        img{
+          width: 100%;
+          height: auto;
+          border-radius: 50%;
+        }
+      }
+    }
+    &--comment{
+      width: 100%;
+      &--user{
+        font-size: 12px;
+        margin-bottom: 10px;
+      }
+      &--text{
+        margin-left: 20px;
+        box-sizing: border-box;
+        display: inline-block;
+        position: relative;
+        padding: 16px;
+        width: calc(100% - 20px);
+        border-radius: 15px;
+        background: #eef0f4;
+        &:after{
+          content: "";
+          display: inline-block;
+          position: absolute;
+          top: 3px; 
+          left: -19px;
+          border: 8px solid transparent;
+          border-right: 18px solid #edf1ee;
+          -webkit-transform: rotate(35deg);
+          transform: rotate(35deg);
+        }
+        &--time{
+          margin-top: 10px;
+          font-size: 12px;
+          color: #aaa;
+        }
+      }
+    }
+  }
+  
+  //削除と編集ボタン
+  .giver__buttons{
+    display: block;
+    margin: 20px 0;
+    &--edit{
+      width: 100%;
+      margin: 0 0 0 0;
+      button{
+        background-color: #3EC1C9;
+        color: #fff;
+        font-size: 16px;
+        height: 56px;
+        width: 100%;
+        cursor: pointer;
+      }
+    }
+    &--delete{
+      width: 100%;
+      margin: 10px 0 0 0;
+      button{
+        background-color: #AAAAAA;
+        color: #fff;
+        font-size: 16px;
+        height: 56px;
+        width: 100%;
+        cursor: pointer;
+      }
+    }
+  }
+
 }
