--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
               </label>
             </div>
             <div class="top-content__search-form--box--main--field--submit">
-              <%= f.submit "search", class: "top-content__search-form--box--main--field--submit-btn" %>
+              <%= f.submit "検索する", class: "top-content__search-form--box--main--field--submit-btn" %>
               or
               <div class="nav__link">
                 <%= link_to animals_path do%>
