--- a/app/assets/stylesheets/animal/animal_image.scss
+++ b/app/assets/stylesheets/animal/animal_image.scss
@@ -12,6 +12,10 @@
       .upper-box {
         height: 112px;
         width: 100%;
+        img{
+          width: 112px;
+          height: 112px;
+        }
       }
       .lower-box {
         display: flex;
@@ -71,6 +75,57 @@
     }
     .hidden-checkbox {
       display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 750px){
+
+}
+
+@media screen and (max-width: 480px){
+  .post__drop__box__container{
+    display: block;
+    margin: 16px auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    .prev-content {
+      display: flex;
+      .preview-box {
+        height: 115px;
+        width: 70px;
+        margin: 0 3px 0 3px;
+        .upper-box {
+          height: 70px;
+          width: 100%;
+          img{
+            width: 70px;
+            height: 70px;
+          }
+        }
+        .lower-box {
+          display: flex;
+          text-align: center;
+          .update-box {
+            color: #00b0ff;
+            width: 50%;
+            height: 50px;
+            line-height: 50px;
+            border: 1px solid #eee;
+            background: #f5f5f5;
+            cursor: pointer;
+          }
+          .delete-box {
+            color: #00b0ff;
+            width: 50%;
+            height: 50px;
+            line-height: 50px;
+            border: 1px solid #eee;
+            background: #f5f5f5;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 }
