--- a/app/assets/stylesheets/animal/animal_show.scss
+++ b/app/assets/stylesheets/animal/animal_show.scss
@@ -253,6 +253,7 @@
         width: calc(100% - 2px);
         height: 100px;
         padding: 10px;
+        border: 1px solid #AAAAAA;
         box-sizing: border-box;
       }
       .form__submit{
@@ -330,7 +331,7 @@
   .animal-images{
     display: flex;
     &__image-left{
-      height: 500px;
+      height: 300px;
       width: 50%;
       overflow: hidden;
       border: 1px solid #efefef;
@@ -369,7 +370,7 @@
       }
     }
     &__image-right{
-      height: 500px;
+      height: 300px;
       width: 50%;
       &__top{
         display: flex;
@@ -379,13 +380,15 @@
           width: 50%;
           height: 100%;
           overflow: hidden;
+          object-fit: cover;
           text-align: center;
-          line-height: 250px;
+          line-height: 150px;
           border: 1px solid #efefef;
           font-weight: 600;
           img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
             display: block;
             transition-duration: 0.3s;
             &:hover{
@@ -399,12 +402,13 @@
           height: 100%;
           overflow: hidden;
           text-align: center;
-          line-height: 250px;
+          line-height: 150px;
           border: 1px solid #efefef;
           font-weight: 600;
           img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
             display: block;
             transition-duration: 0.3s;
             &:hover{
@@ -423,12 +427,13 @@
           width: 50%;
           height: 100%;
           text-align: center;
-          line-height: 250px;
+          line-height: 150px;
           border: 1px solid #efefef;
           font-weight: 600;
           img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
             display: block;
             transition-duration: 0.3s;
             object-fit: cover;
@@ -443,12 +448,13 @@
           width: 50%;
           height: 100%;
           text-align: center;
-          line-height: 250px;
+          line-height: 150px;
           border: 1px solid #efefef;
           font-weight: 600;
           img{
             width: 100%;
             height: 100%;
+            object-fit: cover;
             display: block;
             transition-duration: 0.3s;
             object-fit: cover;
@@ -597,5 +603,149 @@
       }
     }
   }
+}
 
+//スマートフォン用のCSS
+@media screen and (max-width: 480px){
+  .animal-images{
+    display: block;
+    &__image-left{
+      height: 300px;
+      width: 100%;
+      overflow: hidden;
+      border: 1px solid #efefef;
+      img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        display: block;
+        transition-duration: 0.3s;
+        &:hover{
+          transform: scale(1.1);
+          transition-duration: 0.3s;
+        }
+      }
+      .buied_item{
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 150px 150px 0 0;
+        border-color: #3EC1C9 transparent transparent transparent;
+        position: absolute;
+        top: 138px;
+        left: 1px;
+        padding-top: 10px;
+        &:after{
+          content: "Decided";
+          font-size: 20px;
+          display: block;
+          color: #fff;
+          transform: rotate(-45deg);
+          letter-spacing: 2px;
+          font-weight: 600;
+          position: absolute;
+          top: -100px;
+          left: 10px;
+        }
+      }
+    }
+    &__image-right{
+      display: flex;
+      width: 100%;
+      height: 100px;
+      &__top{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        &-left{
+          width: 50%;
+          height: 100%;
+          overflow: hidden;
+          object-fit: cover;
+          text-align: center;
+          line-height: 100px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            transition-duration: 0.3s;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+        &-right{
+          width: 50%;
+          height: 100%;
+          overflow: hidden;
+          text-align: center;
+          line-height: 100px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            transition-duration: 0.3s;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+      }
+      &__bottom{
+        display: flex;
+        height: 100%;
+        width: 100%;
+        &-left{
+          overflow: hidden;
+          width: 50%;
+          height: 100%;
+          text-align: center;
+          line-height: 100px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            transition-duration: 0.3s;
+            object-fit: cover;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+        &-right{
+          overflow: hidden;
+          width: 50%;
+          height: 100%;
+          text-align: center;
+          line-height: 100px;
+          border: 1px solid #efefef;
+          font-weight: 600;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            transition-duration: 0.3s;
+            object-fit: cover;
+            &:hover{
+              transform: scale(1.1);
+              transition-duration: 0.3s;
+            }
+          }
+        }
+      }
+    }
+  }
 }
