--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -74,3 +74,63 @@ footer{
     }
   }
 }
+
+@media screen and (max-width: 750px){
+  //募集リンク部
+  .radius-button{
+    width: 100vw;
+    height: 80px;
+    line-height: 80px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    cursor: pointer;
+    a{
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      text-align: center;
+      font-size: 20px;
+      color: #fff;
+      background-color: #3EC1C9;
+      border-radius: 1px;
+      opacity: 0.8;
+      &:hover{
+        opacity: 1;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px){
+  //募集リンク部
+  .radius-button{
+    width: 100vw;
+    height: 80px;
+    line-height: 80px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    cursor: pointer;
+    a{
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      text-align: center;
+      font-size: 20px;
+      color: #fff;
+      background-color: #3EC1C9;
+      border-radius: 1px;
+      opacity: 0.8;
+      &:hover{
+        opacity: 1;
+      }
+    }
+  }
+}
