--- a/app/assets/stylesheets/home/mordal.scss
+++ b/app/assets/stylesheets/home/mordal.scss
@@ -14,7 +14,6 @@
  margin: 100px auto 0;
  display: none;
  text-align: center;
- display: none;
  &__content{
    background-color: #fff;
    border: 1px solid #eee;
@@ -87,6 +86,7 @@
 .field{
  margin-top: 5px;
  &__input{
+   border: 1px solid #888888;
    width: 300px;
    height: 40px;
    padding: 2px 20px 2px 10px;
@@ -107,6 +107,7 @@
    color: #fff;
    font-weight: 800;
    background-color: #3EC1C9;
+   border: 1px solid #3EC1C9;
    width: 200px;
    border-radius: 10px;
    margin: 20px auto;
