--- a/app/assets/stylesheets/home/top-page_header.scss
+++ b/app/assets/stylesheets/home/top-page_header.scss
@@ -64,114 +64,170 @@
       }
     }
   }
-  &__search-form{
-    opacity: 0.8;
-    background-color: #fff;
-    border-radius: 4px;
-    padding: 32px;
-    padding-bottom: 24px;
-    width: 441px;
-    box-shadow: 0 16px 40px rgba(0,0,0,0.12);
-    position: absolute;
-    left: 50px;
-    bottom: 200px;
-    z-index: 2;
-    &:hover{
-      opacity: 1;
-    }
-    &--box{
-      font-size: 30px;
-      line-height: 36px;
-      letter-spacing: normal;
+}
+
+.top-content__search-form{
+  opacity: 0.8;
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 32px;
+  padding-bottom: 24px;
+  width: 441px;
+  box-shadow: 0 16px 40px rgba(0,0,0,0.12);
+  position: absolute;
+  left: 50px;
+  bottom: 200px;
+  z-index: 2;
+  &:hover{
+    opacity: 1;
+  }
+  &--box{
+    font-size: 30px;
+    line-height: 36px;
+    letter-spacing: normal;
+    color: #484848;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    margin: 0px;
+    padding: 0px;
+    &--title{
       color: #484848;
-      padding-top: 6px;
-      padding-bottom: 6px;
+      font-size: 1em;
+      font-weight: 800;
+      line-height: inherit;
       margin: 0px;
       padding: 0px;
-      &--title{
-        color: #484848;
-        font-size: 1em;
-        font-weight: 800;
-        line-height: inherit;
-        margin: 0px;
-        padding: 0px;
-      }
-      &--main{
-        box-sizing: border-box;
-        background: #ffffff;
-        border-radius: 4px;
-        box-shadow: 0 0 black;
-        form{
-          display: block;
-          margin-top: 0em;
-          .top-content__search-form--box--main--field{
-            margin-top: 16px;
-            label{
-              line-height: normal;
-              .top-content__search-form--box--main--field--label--area{
-                font-size: 12px;
-                font-weight: 800;
-                letter-spacing: 1px;
-                margin-bottom: 8px;
-              }
-              div{
-                select{
-                  padding-left: 12px;
-                  padding-right: 12px;
-                  position: relative;
-                  align-items: center;
-                  background-color: #fff;
-                  border: 1px solid #EBEBEB;
-                  border-radius: 4px;
-                  display: flex;
-                  height: 48px;
-                  width: 100%;
-                }
-              }
-              .top-content__search-form--box--main--field--label--category{
-                font-size: 12px;
-                font-weight: 800;
-                letter-spacing: 1px;
-                margin-bottom: 8px;
+    }
+    &--main{
+      box-sizing: border-box;
+      background: #ffffff;
+      border-radius: 4px;
+      box-shadow: 0 0 black;
+      form{
+        display: block;
+        margin-top: 0em;
+        .top-content__search-form--box--main--field{
+          margin-top: 16px;
+          label{
+            line-height: normal;
+            .top-content__search-form--box--main--field--label--area{
+              font-size: 12px;
+              font-weight: 800;
+              letter-spacing: 1px;
+              margin-bottom: 8px;
+            }
+            div{
+              select{
+                padding-left: 12px;
+                padding-right: 12px;
+                position: relative;
+                align-items: center;
+                background-color: #fff;
+                border: 1px solid #EBEBEB;
+                border-radius: 4px;
+                display: flex;
+                height: 48px;
+                width: 100%;
               }
             }
-            &--submit{
-              margin-top: 16px;
-              text-align: center;
-              &-btn{
-                margin: 15px auto;
-                background-color: #3EC1C9;
-                width: 100%;
-                border-radius: 4px;
-                color: #fff;
+            .top-content__search-form--box--main--field--label--category{
+              font-size: 12px;
+              font-weight: 800;
+              letter-spacing: 1px;
+              margin-bottom: 8px;
+            }
+          }
+          &--submit{
+            margin-top: 16px;
+            text-align: center;
+            &-btn{
+              margin: 15px auto;
+              background-color: #3EC1C9;
+              width: 100%;
+              border-radius: 4px;
+              color: #fff;
+              font-size: 16px;
+              line-height: 24px;
+              letter-spacing: normal;
+              padding-top: 10px;
+              padding-bottom: 10px;
+              cursor: pointer;
+              border: 1px solid #3EC1C9;
+            }
+            .nav__link{
+              margin: 15px auto;
+              background-color: #aaa;
+              width: 100;
+              border-radius: 4px;
+              line-height: 24px;
+              letter-spacing: normal;
+              padding-top: 10px;
+              padding-bottom: 10px;
+              font-weight: 800;
+              cursor: pointer;
+              a{
+                text-decoration: none;
                 font-size: 16px;
-                line-height: 24px;
-                letter-spacing: normal;
-                padding-top: 10px;
-                padding-bottom: 10px;
-                cursor: pointer;
-              }
-              .nav__link{
-                margin: 15px auto;
-                background-color: #aaa;
-                width: 100;
-                border-radius: 4px;
-                line-height: 24px;
-                letter-spacing: normal;
-                padding-top: 10px;
-                padding-bottom: 10px;
-                font-weight: 800;
-                cursor: pointer;
-                a{
-                  text-decoration: none;
-                  font-size: 16px;
-                  color: #fff;
-                }
+                color: #fff;
               }
             }
           }
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 750px){
+  //募集リンク部
+  .top-content{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    video{
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      z-index: 1
+    }
+  }
+  .top-content__search-form{
+    opacity: 0.75;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    box-sizing: border-box;
+  }
+}
+
+
+@media screen and (max-width: 480px){
+  //募集リンク部
+  .top-content{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    video{
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      z-index: 1
+    }
+  }
+
+  .top-content__search-form{
+    opacity: 0.75;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    box-sizing: border-box;
   }
 }
