--- a/app/assets/stylesheets/user/user_show.scss
+++ b/app/assets/stylesheets/user/user_show.scss
@@ -83,10 +83,10 @@
     flex-wrap: wrap;
     padding: 20px;
     &--link{
-      margin: 20px 5px 0;
       text-decoration: none;
       cursor: pointer;
       &__animal{
+        margin: 20px 5px 0;
         &--photo{
           position: relative;
           img{
@@ -215,6 +215,7 @@
         font-size: 16px;
         color: #fff;
         background-color: #3EC1C9 ;
+        border: 1px solid #3EC1C9;
         cursor: pointer;
       }    
     }
@@ -248,4 +249,195 @@
   line-height: 70px;
   margin-left: 10px;
   font-weight: 600;
+}
+
+
+
+@media screen and (max-width: 700px){
+  //募集リンク部
+  .profile{
+    border-top: 50px solid #EFEFEF;
+    border-bottom: 100px solid #EFEFEF;
+    margin: 0 auto;
+    width: 90vw;
+    background-color: #fff;
+  }
+  
+  .tab-contents{
+    width: 100%;
+    .giving-animals{
+      display: none;
+      flex-wrap: wrap;
+      padding: 20px;
+      box-sizing: border-box;
+      &--link{
+        width: 33%;
+        text-decoration: none;
+        cursor: pointer;
+        &__animal{
+          margin: 20px 5px 0;
+          &--photo{
+            width: 100%;
+            position: relative;
+            img{
+              height: 180px;
+              width: 100%;
+            }
+            .buied_item{
+              width: 0;
+              height: 0;
+              border-style: solid;
+              border-width: 100px 100px 0 0;
+              border-color: #3EC1C9 transparent transparent transparent;
+              position: absolute;
+              top: 0;
+              left: 0;
+              padding-top: 10px;
+              &:after{
+                content: "Desided";
+                display: block;
+                color: #fff;
+                transform: rotate(-45deg);
+                letter-spacing: 2px;
+                font-weight: 600;
+                position: absolute;
+                top: -70px;
+                left: 0px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .is-show{
+      display: flex;
+    }
+  } 
+  //アカウント削除ボタン
+  .account-btns{
+    border-top: 2px solid #efefef;
+    padding: 40px 60px;
+    display: block;
+    &__edit{
+      padding: 20px;
+      a{
+        button{
+          height: 60px;
+          width: 100%;
+          border-radius: 8px;
+          font-size: 16px;
+          color: #fff;
+          background-color: #3EC1C9 ;
+          border: 1px solid #3EC1C9;
+          cursor: pointer;
+        }    
+      }
+    }
+    &__delete{
+      padding: 20px;
+      a{
+        button{
+          height: 60px;
+          width: 100%;
+          border-radius: 8px;
+          font-size: 16px;
+          color: #fff;
+          background-color: #aaa;
+          cursor: pointer;
+        }    
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 480px){
+  .tab-contents{
+    width: 100%;
+    .giving-animals{
+      display: none;
+      flex-wrap: wrap;
+      padding: 20px;
+      box-sizing: border-box;
+      &--link{
+        width: 33%;
+        text-decoration: none;
+        cursor: pointer;
+        &__animal{
+          margin: 20px 5px 0;
+          &--photo{
+            width: 100%;
+            position: relative;
+            img{
+              height: 120px;
+              width: 100%;
+            }
+            .buied_item{
+              width: 0;
+              height: 0;
+              border-style: solid;
+              border-width: 100px 100px 0 0;
+              border-color: #3EC1C9 transparent transparent transparent;
+              position: absolute;
+              top: 0;
+              left: 0;
+              padding-top: 10px;
+              &:after{
+                content: "Desided";
+                display: block;
+                color: #fff;
+                transform: rotate(-45deg);
+                letter-spacing: 2px;
+                font-weight: 600;
+                position: absolute;
+                top: -70px;
+                left: 0px;
+              }
+            }
+          }
+          &--content{
+            display: none;
+          }
+        }
+      }
+    }
+    .is-show{
+      display: flex;
+    }
+  } 
+  //アカウント削除ボタン
+  .account-btns{
+    border-top: 2px solid #efefef;
+    padding: 40px 60px;
+    display: block;
+    &__edit{
+      padding: 20px;
+      a{
+        button{
+          height: 60px;
+          width: 100%;
+          border-radius: 8px;
+          font-size: 16px;
+          color: #fff;
+          background-color: #3EC1C9 ;
+          border: 1px solid #3EC1C9;
+          cursor: pointer;
+        }    
+      }
+    }
+    &__delete{
+      padding: 20px;
+      a{
+        button{
+          height: 60px;
+          width: 100%;
+          border-radius: 8px;
+          font-size: 16px;
+          color: #fff;
+          background-color: #aaa;
+          cursor: pointer;
+        }    
+      }
+    }
+  }
 }
