--- a/app/assets/stylesheets/home/mordal.scss
+++ b/app/assets/stylesheets/home/mordal.scss
@@ -117,3 +117,71 @@
    cursor: pointer;
  }
 }
+
+@media screen and (max-width: 360px){
+  .sign_in_modal {
+    position: absolute;
+    width: 90%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 5px;
+    margin: 100px auto 0;
+    display: none;
+    text-align: center;
+    #signin__errors{
+      margin-top: 20px;
+      text-align: left;
+      padding-left: 15px;
+      padding-right: 15px;
+      &__list{
+        li{
+          color: #3EC1C9;
+        }
+      }    
+    }
+  }
+  .sign_up_modal {
+    position: absolute;
+    width: 90%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 5px;
+    margin: 100px auto 0;
+    display: none;
+    text-align: center;
+    #signup__errors{
+      margin-top: 20px;
+      text-align: left;
+      padding-left: 15px;
+      &__list{
+        li{
+          color: #3EC1C9;
+        }
+      }    
+    }
+  }
+
+  .field{
+    margin-top: 5px;
+    &__input{
+      border: 1px solid #888888;
+      width: 80%;
+      height: 40px;
+      padding: 2px 20px 2px 10px;
+    }
+    &__remember{
+      width: 15px;
+      height: 15px;
+    }
+    &__remember-me{
+      font-size: 15px;
+      color: #808080;
+      padding-top: 10px;
+    }
+  }
+
+}
