--- a/app/assets/stylesheets/home/top-page_header.scss
+++ b/app/assets/stylesheets/home/top-page_header.scss
@@ -231,3 +231,86 @@
     box-sizing: border-box;
   }
 }
+
+@media screen and (max-width: 360px){
+  //募集リンク部
+  .top-content{
+    position: relative;
+    width: 100vw;
+    video{
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      z-index: 1
+    }
+    &__header{
+      position: relative;
+      z-index: 2;
+      display: flex;
+      justify-content: space-between;
+      &--icon{
+        img{
+          width: 150px;
+          height: 150px;
+        }
+      }
+      &--lists{
+        display: flex;
+        justify-content: space-between;
+        &--list{
+          height: 30px;
+          text-align: center;
+          margin-top: 30px;
+          margin-right: 10px;
+          font-size: 14px;
+          color: #fff;
+          font-weight: 800;
+          cursor: pointer;
+          position: relative;
+          display: inline-block;
+          text-decoration: none;
+          a{
+            text-decoration: none;
+            margin: 0 auto;
+            color: white;
+          }
+        }
+        li::after{
+          position: absolute;
+          bottom: 2px;
+          left: 0;
+          content: '';
+          width: 100%;
+          height: 2px;
+          background: #fff;
+          opacity: 0;
+          visibility: hidden;
+          transition: .3s;
+        }
+        li:hover::after{
+          bottom: -4px;
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+  }
+  
+
+  .top-content__search-form{
+    opacity: 0.75;
+    width: 90%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    box-sizing: border-box;
+
+    &--box--title{
+      font-size: 20px;
+    }
+  }
+}
