レスポンシブ対応

--- a/app/assets/stylesheets/home/top-page_header.scss
+++ b/app/assets/stylesheets/home/top-page_header.scss
@@ -237,6 +237,7 @@
   .top-content{
     position: relative;
     width: 100vw;
+    height: 900px;
     video{
       position: fixed;
       right: 0;
