--- a/app/assets/stylesheets/animal/animals_new.scss
+++ b/app/assets/stylesheets/animal/animals_new.scss
@@ -105,6 +105,8 @@
       input{
         width: 100%;
         margin: 8px 0 0;
+        padding: 10px;
+        box-sizing: border-box;
         height: 48px;
         border-radius: 4px;
         border: 1px solid #EFEFEF;
@@ -116,6 +118,8 @@
     &__text{
       textarea{
         margin: 8px 0 0;
+        padding: 10px;
+        box-sizing: border-box;
         display: block;
         width: 100%;
         max-width: 100%;
