--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer__content">
     <div class="footer__content--logo">
-      <%= image_tag 'logo_bottom.png', width: '200', height: '200' %>
+      <%= image_tag 'logo_bottom.png' %>
     </div>
     <div class="footer__content--text">
       <ul class="footer__content--text__lists">
