--- a/app/assets/stylesheets/animal/animal_index.scss
+++ b/app/assets/stylesheets/animal/animal_index.scss
@@ -45,7 +45,7 @@
 }
 
 .animals__container{
-  width: 80%;
+  width: 70%;
   margin: 40px auto;
   &__content{
     display: flex;
@@ -54,95 +54,99 @@
   }
 }
 .animal-show__link{
-  margin: 20px 5px;
   cursor: pointer;
   display: block;
-  width: 240px;
+  width: 20%;
   text-align: center;
   text-decoration: none;
   color: #484848;
-  &--image{
-    position: relative;
-    overflow: hidden;
-    img{
-      display: block;
-      transition-duration: 0.3s;
-      &:hover{
-        transform: scale(1.1);
-        transition-duration: 0.3s;
-      }
-    }
-
-    &-prefecture{
-      position: absolute;
-      bottom: 10px;
-      color: #fff;
-      font-weight: 500;
-      font-size: 12px;
-      padding: 5px;
-      background: rgba(0, 0, 0, 0.5);
-      border-top-left-radius : 0px;
-      -webkit-border-top-left-radius: 0px;
-      -moz-border-radius-topleft: 0px;
-      border-bottom-left-radius : 0px;
-      -webkit-border-bottom-left-radius: 0px;
-      -moz-border-radius-bottomleft: 0px;
-      border-top-right-radius : 8px;
-      -webkit-border-top-right-radius: 8px;
-      -moz-border-radius-topright: 8px;
-      border-bottom-right-radius : 8px;
-      -webkit-border-bottom-right-radius: 8px;
-      -moz-border-radius-bottomright: 8px;
-    }
-    .buied_item{
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 100px 100px 0 0;
-      border-color: #3EC1C9 transparent transparent transparent;
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding-top: 10px;
-      &:after{
-        content: "Decided";
+  &--cover{
+    margin: 20px 5px;
+    &--image{
+      position: relative;
+      overflow: hidden;
+      img{
+        height: 150px;
+        width: 100%;
         display: block;
-        color: #fff;
-        transform: rotate(-45deg);
-        letter-spacing: 2px;
-        font-weight: 600;
+        object-fit: cover;
+        transition-duration: 0.3s;
+        &:hover{
+          transform: scale(1.1);
+          transition-duration: 0.3s;
+        }
+      }
+      &-prefecture{
         position: absolute;
-        top: -70px;
-        left: 0px;
-      }
-    }
-  }
-  &--name{
-    display: flex;
-    justify-content: center;
-    &--gender{
-      &--male{
-        color: blue;
-        font-size: 16px;
-        line-height: 24px;
-        margin-left: 10px;
-      }
-      &--female{
-        color: red;
-        font-size: 16px;
-        line-height: 24px;
-        margin-left: 10px;
-      }
-      &--unknown{
-        color: #aaa;
+        bottom: 10px;
+        color: #fff;
+        font-weight: 500;
         font-size: 12px;
-        line-height: 24px;
-        margin-left: 10px;
+        padding: 5px;
+        background: rgba(0, 0, 0, 0.5);
+        border-top-left-radius : 0px;
+        -webkit-border-top-left-radius: 0px;
+        -moz-border-radius-topleft: 0px;
+        border-bottom-left-radius : 0px;
+        -webkit-border-bottom-left-radius: 0px;
+        -moz-border-radius-bottomleft: 0px;
+        border-top-right-radius : 8px;
+        -webkit-border-top-right-radius: 8px;
+        -moz-border-radius-topright: 8px;
+        border-bottom-right-radius : 8px;
+        -webkit-border-bottom-right-radius: 8px;
+        -moz-border-radius-bottomright: 8px;
+      }
+      .buied_item{
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 100px 100px 0 0;
+        border-color: #3EC1C9 transparent transparent transparent;
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding-top: 10px;
+        &:after{
+          content: "Decided";
+          display: block;
+          color: #fff;
+          transform: rotate(-45deg);
+          letter-spacing: 2px;
+          font-weight: 600;
+          position: absolute;
+          top: -70px;
+          left: 0px;
+        }
       }
     }
-  }
-  &--username{
-    font-size: 12px;
+    &--name{
+      display: flex;
+      justify-content: center;
+      &--gender{
+        &--male{
+          color: blue;
+          font-size: 16px;
+          line-height: 24px;
+          margin-left: 10px;
+        }
+        &--female{
+          color: red;
+          font-size: 16px;
+          line-height: 24px;
+          margin-left: 10px;
+        }
+        &--unknown{
+          color: #aaa;
+          font-size: 12px;
+          line-height: 24px;
+          margin-left: 10px;
+        }
+      }
+    }
+    &--username{
+      font-size: 12px;
+    }
   }
 }
 
@@ -196,16 +200,17 @@
   }
   
   .animal-show__link{
-    margin: 20px 5px;
     cursor: pointer;
     display: block;
-    width: 31.5%;
+    width: 33.33%;
     text-align: center;
     text-decoration: none;
     color: #484848;
-    &--image{
-      position: relative;
-      overflow: hidden;
+    &--cover{
+      &--image{
+        position: relative;
+        overflow: hidden;
+      }
     }
   }
 }
@@ -260,30 +265,149 @@
   }
   
   .animal-show__link{
-    margin: 20px 5px;
     cursor: pointer;
     display: block;
-    width: 30.5%;
+    width: 33.33%;
     text-align: center;
     text-decoration: none;
     color: #484848;
-    &--image{
-      width: 100%;
-      position: relative;
-      overflow: hidden;
-      height: 100px;
-      img{
-        object-fit: contain;
+    &--cover{
+      &--image{
         width: 100%;
+        position: relative;
+        overflow: hidden;
         height: 100px;
-        object-fit: cover;
+        img{
+          object-fit: contain;
+          width: 100%;
+          height: 100px;
+          object-fit: cover;
+        }
+      }
+      &--name{
+        display: none;
+      }
+      &--username{
+        display: none;
+      }
+  
+    }
+  }
+}
+
+@media screen and (max-width: 360px){
+  .search_view{
+    form{
+      display: block;
+      select{
+        height: 30px;
+        border-radius: 4px;
+        border: 1px solid #efefef;
+        font-size: 12px;
+        line-height: 1.5;
+        cursor: pointer;
+        padding: 0 16px;
+        width: 49%;
+        box-sizing: border-box;
+      }
+      .search-input{
+        margin-top: 20px;
+        width: 100%;
+        height: 30px;
+        border-radius: 4px;
+        border: 1px solid #efefef;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 12px;
+        padding: 0 10px;
+        box-sizing: border-box;
+      }
+      .search-btn{
+        margin-top: 20px;
+        background: #3EC1C9;
+        border: 1px solid #3EC1C9;
+        color: #fff;
+        display: block;
+        width: 100%;
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 30px;
+        transition: all ease-out .3s;
+        text-align: center;
+        border-radius: 5px;
       }
     }
-    &--name{
-      display: none;
-    }
-    &--username{
-      display: none;
+  }
+
+  .animal-show__link{
+    cursor: pointer;
+    display: block;
+    width: 33.33333%;
+    text-align: center;
+    text-decoration: none;
+    color: #484848;
+    &--cover{
+      margin: 10px 5px;
+      &--image{
+        width: 100%;
+        position: relative;
+        overflow: hidden;
+        height: 70px;
+        img{
+          height: 70px;
+          width: 100%;
+          object-fit: cover;
+        }
+        &-prefecture{
+          position: absolute;
+          bottom: 8px;
+          color: #fff;
+          font-weight: 500;
+          font-size: 12px;
+          padding: 5px;
+          background: rgba(0, 0, 0, 0.5);
+          border-top-left-radius : 0px;
+          -webkit-border-top-left-radius: 0px;
+          -moz-border-radius-topleft: 0px;
+          border-bottom-left-radius : 0px;
+          -webkit-border-bottom-left-radius: 0px;
+          -moz-border-radius-bottomleft: 0px;
+          border-top-right-radius : 8px;
+          -webkit-border-top-right-radius: 8px;
+          -moz-border-radius-topright: 8px;
+          border-bottom-right-radius : 8px;
+          -webkit-border-bottom-right-radius: 8px;
+          -moz-border-radius-bottomright: 8px;
+        }
+        .buied_item{
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 100px 100px 0 0;
+          border-color: #3EC1C9 transparent transparent transparent;
+          position: absolute;
+          top: 0;
+          left: 0;
+          padding-top: 10px;
+          &:after{
+            content: "Decided";
+            display: block;
+            color: #fff;
+            transform: rotate(-45deg);
+            letter-spacing: 2px;
+            font-weight: 600;
+            position: absolute;
+            top: -70px;
+            left: 0px;
+          }
+        }
+        &--name{
+          display: none;
+        }
+        &--username{
+          display: none;
+        }
+      }
     }
   }
 }
