--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -50,6 +50,10 @@ footer{
     &--logo{
       display: flex;
       justify-content: center;
+      margin: 20px 0;
+      img{
+        width: 100px;
+      }
     }
     &--text{
       display: flex;
@@ -78,14 +82,10 @@ footer{
 @media screen and (max-width: 750px){
   //募集リンク部
   .radius-button{
-    width: 100vw;
+    position: static;
+    width: 100%;
     height: 80px;
     line-height: 80px;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 10;
     cursor: pointer;
     a{
       display: block;
@@ -111,11 +111,7 @@ footer{
     width: 100vw;
     height: 80px;
     line-height: 80px;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 10;
+    position: static;
     cursor: pointer;
     a{
       display: block;
@@ -141,7 +137,7 @@ footer{
     width: 100vw;
     height: 50px;
     line-height: 50px;
-    z-index: 10;
+    position: static;
     cursor: pointer;
     a{
       display: block;
