コントローラーと統合テストの記述

--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -78,7 +78,7 @@
         </div>
 
         <div class="animal-form__content submit-box">
-          <%= f.submit "募集する", disable_with: "Save..." %>
+          <%= f.submit "募集する", disable_with: "Save...", class: "animal-new__submit" %>
           <%= link_to "もどる", root_path %>
         </div>
       <% end %>
