--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
               <%= f.submit "検索する", class: "top-content__search-form--box--main--field--submit-btn" %>
               or
               <div class="nav__link">
-                <%= link_to animals_path do%>
+                <%= link_to animals_path, class: "all-animals__search" do%>
                   <h2>すべてのペットを見に行く</h2>
                 <% end %>
               </div>
