--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="animal-form__content submit-box">
-          <%= f.submit "募集する", disable_with: "Save..." %>
+          <%= f.submit "編集する", disable_with: "Save...", class: "animal-edit__submit" %>
           <%= link_to "もどる", root_path %>
         </div>
       <% end %>
