--- a/app/views/shared/_mordal.html.erb
+++ b/app/views/shared/_mordal.html.erb
@@ -79,7 +79,7 @@
           </div>
 
           <div class="actions">
-            <%= f.submit "Log in" %>
+            <%= f.submit "Log in", class: "login__submit" %>
           </div>
         <% end %>
       </div>
