--- a/app/assets/stylesheets/animal/animal_index.scss
+++ b/app/assets/stylesheets/animal/animal_index.scss
@@ -297,6 +297,7 @@
 
 @media screen and (max-width: 360px){
   .search_view{
+    margin: 20px auto;
     form{
       display: block;
       select{
@@ -336,6 +337,16 @@
         text-align: center;
         border-radius: 5px;
       }
+    }
+  }
+
+  .animals__container{
+    width: 80%;
+    margin: 10px auto 40px;
+    &__content{
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 40px;
     }
   }
 
