textが長すぎた場合省略する

--- a/app/assets/stylesheets/user/user_show.scss
+++ b/app/assets/stylesheets/user/user_show.scss
@@ -620,6 +620,11 @@
       }
     }
   }
+
+  .animals-transactionmessages{
+    padding: 0 !important;
+  }
+
   //アカウント削除ボタン
   .account-btns{
     padding: 10px 10px;
